[package]
name = "xcm-emulator-example"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Shaun Wang <spxwang@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.137", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
proc-macro2 = "1.0.40"
strum = "0.24.1"

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27-1" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27-1" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27-1" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27-1" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27-1" }
kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27-1" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.27-1" }

xcm-emulator = { path = "../" }
yayoi = { path = "../yayoi" }
